# opencv

./: CMakeLists.txt  README.md
apps/traincascade/: boost.cpp  old_ml_inner_functions.cpp  old_ml_tree.cpp
cmake/: OpenCVCompilerOptimizations.cmake  OpenCVCompilerOptions.cmake  OpenCVDetectCXXCompiler.cmake  OpenCVDetectHDF.cmake  OpenCVDetectOpenCL.cmake  OpenCVFindLibsVideo.cmake  OpenCVUtils.cmake
cmake/templates/: OpenCVConfig.cmake.in  cvconfig.h.in
doc/: CMakeLists.txt
modules/androidgstreamer/: .gitignore  CMakeLists.txt  README.md  cmake-opencv-with-gstreamer.sh  gstreamer.cmake  gstreamer_init.cpp.in  toolchain.cmake
modules/calib3d/src/: ap3p.cpp  calibinit.cpp  calibration.cpp  compat_ptsetreg.cpp  dls.cpp  epnp.cpp  fisheye.cpp  five-point.cpp  fundam.cpp  levmarq.cpp  p3p.cpp  ptsetreg.cpp  rho.cpp  solvepnp.cpp  stereobm.cpp  stereosgbm.cpp  upnp.cpp
modules/calib3d/test/: test_cameracalibration.cpp  test_cameracalibration_badarg.cpp  test_chesscorners.cpp  test_fundam.cpp  test_homography.cpp  test_modelest.cpp  test_posit.cpp  test_undistort.cpp  test_undistort_badarg.cpp  test_undistort_points.cpp
modules/core/: CMakeLists.txt
modules/core/perf/: perf_minmaxloc.cpp  perf_norm.cpp  perf_reduce.cpp
modules/core/src/: alloc.cpp  arithm.cpp  array.cpp  batch_distance.cpp  check.cpp  convert.cpp  convert_scale.cpp  cuda_gpu_mat.cpp  cuda_host_mem.cpp  directx.cpp  intel_gpu_gemm.inl.hpp  lapack.cpp  lut.cpp  mathfuncs.cpp  matmul.cpp  matrix.cpp  matrix_c.cpp  matrix_expressions.cpp  matrix_operations.cpp  matrix_sparse.cpp  matrix_wrap.cpp  merge.cpp  minmax.cpp  norm.cpp  ocl.cpp  ocl_deprecated.hpp  opengl.cpp  out.cpp  ovx.cpp  parallel.cpp  pca.cpp  persistence.cpp  persistence_hdf5.cpp  persistence_hdf5.hpp  precomp.hpp  rand.cpp  softfloat.cpp  split.cpp  stat.cpp  stat.hpp  (+12 more)
modules/core/test/: test_arithm.cpp  test_concatenation.cpp  test_countnonzero.cpp  test_ds.cpp  test_dxt.cpp  test_eigen.cpp  test_hal_core.cpp  test_io.cpp  test_main.cpp  test_mat.cpp  test_math.cpp  test_misc.cpp  test_operations.cpp  test_rand.cpp  test_umat.cpp  test_utils.cpp
modules/cudaarithm/src/: element_operations.cpp
modules/cudafilters/src/: filtering.cpp
modules/cudaimgproc/src/: corners.cpp  match_template.cpp
modules/cudalegacy/src/: calib3d.cpp
modules/cudaoptflow/src/: farneback.cpp
modules/cudastereo/src/: disparity_bilateral_filter.cpp
modules/dnn/: CMakeLists.txt
modules/dnn/cmake/: download_google_inception5.cmake
modules/dnn/src/: dnn.cpp  op_inf_engine.cpp
modules/dnn/test/: test_caffe_importer.cpp  test_common.hpp  test_googlenet.cpp  test_ie_models.cpp  test_layers.cpp  test_tf_importer.cpp  test_torch_importer.cpp
modules/features2d/perf/: perf_batchDistance.cpp
modules/features2d/src/: agast.cpp  akaze.cpp  bagofwords.cpp  draw.cpp  fast.cpp  feature2d.cpp  gftt.cpp  kaze.cpp  matchers.cpp  mser.cpp  orb.cpp
modules/features2d/test/: test_descriptors_regression.cpp
modules/flann/src/: miniflann.cpp
modules/highgui/: CMakeLists.txt
modules/highgui/src/: window.cpp
modules/imgcodecs/: CMakeLists.txt
modules/imgcodecs/src/: bitstrm.cpp  bitstrm.hpp  grfmt_base.cpp  grfmt_bmp.cpp  grfmt_exr.cpp  grfmt_exr.hpp  grfmt_gdal.cpp  grfmt_jpeg.cpp  grfmt_jpeg.hpp  grfmt_jpeg2000.cpp  grfmt_pam.cpp  grfmt_png.cpp  grfmt_pxm.cpp  grfmt_sunras.cpp  grfmt_tiff.cpp  grfmt_tiff.hpp  grfmts.cpp  loadsave.cpp
modules/imgproc/perf/: perf_blur.cpp  perf_warp.cpp
modules/imgproc/src/: _binary_compatibility_trash.cpp  accum.cpp  blend.cpp  canny.cpp  color.cpp  color_hsv.cpp  color_lab.cpp  color_rgb.cpp  color_yuv.cpp  colormap.cpp  contours.cpp  convhull.cpp  corner.cpp  cornersubpix.cpp  demosaicing.cpp  deriv.cpp  distransform.cpp  drawing.cpp  emd.cpp  featureselect.cpp  filter.cpp  floodfill.cpp  gabor.cpp  geometry.cpp  histogram.cpp  hough.cpp  imgwarp.cpp  linefit.cpp  moments.cpp  morph.cpp  phasecorr.cpp  pyramids.cpp  resize.cpp  rotcalipers.cpp  samplers.cpp  shapedescr.cpp  smooth.cpp  sumpixels.cpp  templmatch.cpp  thresh.cpp  (+1 more)
modules/imgproc/test/: test_canny.cpp  test_color.cpp  test_distancetransform.cpp  test_drawing.cpp  test_filter.cpp  test_floodfill.cpp  test_imgwarp.cpp  test_imgwarp_strict.cpp  test_lab.cpp  test_moments.cpp  test_templmatch.cpp  test_thresh.cpp
modules/java/generator/: gen_java.py
modules/ml/src/: ann_mlp.cpp  data.cpp  em.cpp  tree.cpp
modules/ml/test/: test_mltests2.cpp
modules/objdetect/src/: cascadedetect.cpp  cascadedetect.hpp  haar.cpp  hog.cpp  qrcode.cpp
modules/objdetect/test/: test_cascadeandhog.cpp
modules/ocl/doc/: data_structures.rst
modules/ocl/src/: _binary_compatibility_trash.cpp  cl_context.cpp  haar.cpp  matrix_operations.cpp
modules/photo/src/: align.cpp  calibrate.cpp  contrast_preserve.cpp  contrast_preserve.hpp  denoising.cpp  denoising.cuda.cpp  inpaint.cpp  merge.cpp  npr.cpp  seamless_cloning_impl.cpp  tonemap.cpp
modules/python/src2/: cv2.cpp  gen2.py  hdr_parser.py
modules/shape/src/: aff_trans.cpp  haus_dis.cpp  hist_cost.cpp  sc_dis.cpp  tps_trans.cpp
modules/stitching/src/: blenders.cpp  exposure_compensate.cpp  matchers.cpp  seam_finders.cpp  stitcher.cpp  util_log.hpp
modules/superres/src/: btv_l1.cpp  input_array_utility.cpp
modules/ts/misc/: run.py  run_suite.py  trace_profiler.py
modules/ts/src/: cuda_test.cpp  ts_arrtest.cpp  ts_func.cpp  ts_perf.cpp
modules/video/perf/: perf_ecc.cpp
modules/video/src/: bgfg_KNN.cpp  bgfg_gaussmix2.cpp  ecc.cpp  kalman.cpp  lkpyramid.cpp  optflowgf.cpp
modules/video/test/: test_accum.cpp  test_estimaterigid.cpp  test_kalman.cpp
modules/videoio/src/: cap_ffmpeg.cpp  cap_gstreamer.cpp
modules/videostab/src/: global_motion.cpp  inpainting.cpp  (+2 more)
samples/: CMakeLists.txt
samples/android/tutorial-4-opencl/: CMakeLists.txt
samples/android/tutorial-4-opencl/jni/: Android.mk  Application.mk.in
samples/cpp/: matchmethod_orb_akaze_brisk.cpp
samples/dnn/: CMakeLists.txt  object_detection.py  resnet_ssd_face_model_downloader.py  resnet_ssd_face_python.py
samples/python/: facedetect.py
(+174 files in other folders)
